[package]
name = "websocket-poc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.25"
rand = "0.8.5"
tokio = { version = "1.24.1", features = ["full"] }
tokio-tungstenite = "0.18.0"